# hokulea

./: .example.env  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  justfile  kurtosis_params.yaml  mise.toml  op-devnet.docker-compose.yml.patch  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: elf.yml  kurtosis_devnet.yaml  rust_ci.yaml
canoe/: README.md
canoe/bindings/: Cargo.toml
canoe/bindings/src/: lib.rs
canoe/contracts/mock/script/: DeployEigenDACertMockVerifier.s.sol
canoe/contracts/mock/src/: EigenDACertMockVerifier.sol
canoe/contracts/mock/test/: EigenDACertMockVerifier.sol
canoe/provider/: Cargo.toml
canoe/provider/src/: canoe_provider.rs  lib.rs  verifier_caller.rs
canoe/sp1-cc/client/: Cargo.toml
canoe/sp1-cc/client/src/: main.rs
canoe/sp1-cc/elf/: canoe-sp1-cc-client
canoe/sp1-cc/host/: Cargo.toml  build.rs
canoe/sp1-cc/host/src/: holesky_genesis.json  kurtosis_devnet_genesis.json  lib.rs
canoe/sp1-cc/verifier/: Cargo.toml
canoe/sp1-cc/verifier/src/: lib.rs
canoe/sp1-cc/vkey-bin/: Cargo.toml
canoe/sp1-cc/vkey-bin/src/: main.rs
canoe/steel/apps/: Cargo.toml  README.md
canoe/steel/apps/src/: apps.rs  lib.rs
canoe/steel/methods/: Cargo.toml  build.rs
canoe/steel/methods/contracts/: Elf.sol  ImageID.sol
canoe/steel/methods/guest/: Cargo.toml
canoe/steel/verifier/: Cargo.toml
canoe/steel/verifier/src/: lib.rs
canoe/verifier/: Cargo.toml
canoe/verifier-address-fetcher/: Cargo.toml
canoe/verifier-address-fetcher/src/: lib.rs
canoe/verifier/src/: cert_validity.rs  chain_spec.rs  lib.rs  verifier.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: core_client.rs  fp_client.rs  lib.rs  witgen_client.rs  witness.rs
crates/compute-kzg-proof/: Cargo.toml
crates/compute-kzg-proof/src/: compute_kzg_proof.rs  lib.rs
crates/compute-proof/: Cargo.toml  README.md
crates/compute-proof/src/: kzg_proof.rs  lib.rs  view_proof.rs
crates/compute-proof/src/steel/: mod.rs
crates/eigenda/: Cargo.toml  README.md
crates/eigenda-cert/: Cargo.toml
crates/eigenda-cert/src/: altda_commitment.rs  lib.rs  v2_cert.rs  v3_cert.rs
crates/eigenda-v2-struct/: Cargo.toml
crates/eigenda-v2-struct/src/: lib.rs  sol_struct.rs
crates/eigenda/src/: altda_commitment.rs  constant.rs  eigenda.rs  eigenda_blobs.rs  eigenda_data.rs  eigenda_preimage.rs  errors.rs  lib.rs  test_utils.rs  traits.rs  v1_certificate.rs  version.rs
crates/proof/: Cargo.toml  README.md
crates/proof/src/: cert_validity.rs  eigenda_blob_witness.rs  eigenda_provider.rs  eigenda_witness.rs  errors.rs  hint.rs  journal.rs  lib.rs  pipeline.rs  preloaded_eigenda_provider.rs
crates/proof/src/canoe_verifier/: address_fetcher.rs  errors.rs  mod.rs  noop.rs  sp1_cc.rs  steel.rs
crates/witgen/: Cargo.toml
crates/witgen-client/: Cargo.toml
crates/witgen-client/src/: lib.rs  witgen_client.rs
crates/witgen/src/: canoe_witness_provider.rs  cert_validity_provider.rs  lib.rs  witness.rs  witness_provider.rs
crates/zkvm-verification/: Cargo.toml
crates/zkvm-verification/src/: lib.rs
docs/: README.md
example/canoe-on-sepolia/: Cargo.toml  README.md
example/canoe-on-sepolia/src/: main.rs
example/common-preloader/: Cargo.toml
example/common-preloader/src/: lib.rs
example/preloader/: Cargo.toml  README.md  justfile
example/preloader/src/: main.rs
