[package]
name = "canoe-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
eigenda-cert = { workspace = true }
anyhow.workspace = true
serde.workspace = true
async-trait.workspace = true
alloy-primitives.workspace = true
alloy-sol-types = { workspace = true }
canoe-bindings = { workspace = true }