[package]
name = "canoe-verifier"
description = "Eigenda canoe verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
eigenda-cert.workspace = true
alloy-primitives = { workspace = true }
serde.workspace = true
thiserror.workspace = true

revm-primitives = { workspace = true }
reth-chainspec = { workspace = true }
reth-evm = { workspace = true }
alloy-genesis = { workspace = true }