[package]
name = "hokulea-client"
description = "Eigenda Hokulea Client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus.workspace = true
alloy-evm.workspace = true

op-alloy-consensus.workspace = true
op-revm.workspace = true

kona-client.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true
kona-driver.workspace = true
kona-executor.workspace = true
kona-derive.workspace = true

hokulea-proof.workspace = true
hokulea-eigenda.workspace = true

tracing.workspace = true