[package]
name = "eigenda-cert"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-rlp = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
canoe-bindings = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

