[package]
name = "hokulea-eigenda"
version = "0.1.0"
edition = "2021"

[dependencies]
kona-derive.workspace = true
eigenda-v2-struct-rust.workspace = true

# Op Alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
tracing.workspace = true
async-trait.workspace = true
bytes.workspace = true
rust-kzg-bn254-primitives.workspace = true
maili-protocol.workspace = true

[features]
default = []
serde = [
  "maili-protocol/serde",
]
