[package]
name = "hokulea-eigenda"
version = "0.1.0"
edition = "2021"

[dependencies]
kona-derive.workspace = true
eigenda-cert.workspace = true
alloy-primitives = { workspace = true}
tracing.workspace = true
async-trait.workspace = true
rust-kzg-bn254-primitives.workspace = true
kona-protocol.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
kona-derive = { workspace = true, features = ["test-utils"] }
kona-genesis = { workspace = true }
alloy-consensus = { workspace = true}
alloy-primitives = { workspace = true}
alloy-rlp = { workspace = true }

[features]
serde = [
  "kona-protocol/serde",
]
