[package]
name = "hokulea-proof"
description = "Eigenda Proof SDK"
version = "0.1.0"
edition = "2021"

[dependencies]
kona-preimage.workspace = true
kona-proof.workspace = true

hokulea-eigenda.workspace = true

eigenda-v2-struct.workspace = true
canoe-bindings = { workspace = true, optional = true }
rust-kzg-bn254-primitives.workspace = true
rust-kzg-bn254-verifier.workspace = true

ark-bn254.workspace = true
ark-ff.workspace = true

# Alloy
alloy-primitives.workspace = true

# General
async-trait.workspace = true
alloy-sol-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Steel 
canoe-steel-methods = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, optional = true }

[features]
default = []
steel = ["canoe-steel-methods", "risc0-zkvm", "canoe-bindings"]
sp1-contract-call = []