[package]
name = "hokulea-proof"
description = "Eigenda Proof SDK"
version = "0.1.0"
edition = "2021"

[dependencies]
kona-preimage.workspace = true
kona-proof.workspace = true

hokulea-eigenda.workspace = true

eigenda-v2-struct.workspace = true
rust-kzg-bn254-primitives.workspace = true
rust-kzg-bn254-verifier.workspace = true

ark-bn254.workspace = true
ark-ff.workspace = true

# Alloy
alloy-primitives.workspace = true

# General
async-trait.workspace = true
alloy-sol-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
cfg-if.workspace = true

canoe-bindings = { workspace = true, optional = true }

# Steel 
canoe-steel-methods = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, optional = true }

# Sp1-CC
sp1-sdk = { workspace = true, optional = true }
sp1-lib = { workspace = true, features = ["verify"], optional = true}
sha2 = { workspace = true, optional = true }


[features]
steel = ["canoe-steel-methods", "risc0-zkvm", "canoe-bindings"]
sp1-cc = ["sp1-sdk", "canoe-bindings", "sha2", "sp1-lib"]
