[package]
name = "hokulea-proof"
description = "Eigenda Proof SDK"
version = "0.1.0"
edition = "2021"

[dependencies]
kona-preimage.workspace = true
kona-proof.workspace = true

hokulea-eigenda.workspace = true

eigenda-cert.workspace = true
rust-kzg-bn254-primitives.workspace = true
rust-kzg-bn254-verifier.workspace = true

ark-bn254.workspace = true
ark-ff.workspace = true

# Alloy
alloy-primitives.workspace = true

# General
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true

# Canoe
canoe-verifier = { workspace = true } 