[package]
name = "hokulea-witgen"
version = "0.1.0"
edition = "2021"


[dependencies]
alloy-primitives.workspace = true

hokulea-proof.workspace = true
hokulea-compute-proof.workspace = true
hokulea-eigenda.workspace = true
eigenda-v2-struct.workspace = true

rust-kzg-bn254-primitives.workspace = true

async-trait.workspace = true
