[package]
name = "hokulea-example-canoe-on-sepolia"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
canoe-provider  = { workspace = true }
canoe-steel-apps = { workspace = true}
hokulea-proof = { workspace = true, features = ["steel"] }
eigenda-v2-struct = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }

alloy-provider = { workspace = true, features = ["reqwest"] }
