[package]
name = "hokulea-example-canoe-on-sepolia"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
canoe-provider = { workspace = true }
canoe-verifier-address-fetcher = { workspace = true }
canoe-verifier = { workspace = true }
canoe-steel-apps = { workspace = true}
canoe-steel-verifier = { workspace = true}
eigenda-cert = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }

alloy-provider = { workspace = true, features = ["reqwest"] }