[package]
name = "hokulea-example-common-preloader"
version = "0.1.0"
edition = "2021"


[dependencies]
hokulea-proof.workspace = true
hokulea-witgen.workspace = true
hokulea-client.workspace = true

# General
tracing.workspace = true
serde_json = { workspace = true }

kona-client.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true

canoe-provider  = { workspace = true }

alloy-consensus.workspace = true
alloy-rlp.workspace = true

# Execution
alloy-evm.workspace = true
op-revm.workspace = true
op-alloy-consensus.workspace = true
