[package]
name = "hokulea-example-preloader"
version = "0.1.0"
edition = "2021"


[dependencies]
hokulea-proof.workspace = true
hokulea-host-bin.workspace = true
hokulea-witgen.workspace = true
hokulea-client.workspace = true

# General
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
cfg-if = { workspace = true }
serde_json = { workspace = true }

kona-client.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true

canoe-provider  = { workspace = true }
canoe-steel-apps = { workspace = true, optional = true }

alloy-consensus.workspace = true
alloy-rlp.workspace = true

# Execution
alloy-evm.workspace = true
op-revm.workspace = true
op-alloy-consensus.workspace = true

[features]
default = []
steel = ["canoe-steel-apps", "hokulea-proof/steel"]
#sp1-contract-call = ["canoe-sp1-contract-call-host"]