[package]
name = "hokulea-example-preloader"
version = "0.1.0"
edition = "2021"


[dependencies]
hokulea-proof.workspace = true
hokulea-host-bin.workspace = true

hokulea-example-common-preloader = { path = "../common-preloader" }

# General
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
cfg-if = { workspace = true }
kona-client.workspace = true
kona-preimage.workspace = true

canoe-provider  = { workspace = true }
canoe-steel-apps = { workspace = true, optional = true }
canoe-sp1-cc-host = { workspace = true, optional = true }

[features]
default = []
steel = ["canoe-steel-apps", "hokulea-proof/steel"]
sp1-cc = ["canoe-sp1-cc-host", "hokulea-proof/sp1-cc"]

