[package]
name = "hokulea-example-preloader"
version = "0.1.0"
edition = "2021"


[dependencies]
hokulea-proof.workspace = true
hokulea-host-bin.workspace = true
hokulea-witgen.workspace = true
hokulea-zkvm-verification.workspace = true
hokulea-client.workspace = true

# General
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
cfg-if = { workspace = true }
tracing = { workspace = true }
serde_json.workspace = true

kona-client.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true

# Execution
alloy-evm.workspace = true
op-revm.workspace = true
op-alloy-consensus.workspace = true

canoe-provider = { workspace = true }
canoe-verifier = { workspace = true }
canoe-verifier-address-fetcher = { workspace = true }
canoe-steel-apps = { workspace = true, optional = true }
canoe-steel-verifier = { workspace = true, optional = true }
canoe-sp1-cc-host = { workspace = true, optional = true }
canoe-sp1-cc-verifier = { workspace = true, optional = true }

sp1-sdk = {workspace = true}

[features]
steel = ["canoe-steel-apps", "canoe-steel-verifier"]
sp1-cc = ["canoe-sp1-cc-host", "canoe-sp1-cc-verifier"]

