[package]
name = "canoe-sp1-cc-client"
description = ""
edition = "2021"

[dependencies]
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call.git", rev = "b49f97b7c5702fbe574547e523afaec0bee9014d" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }

# alloy
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
canoe-bindings = { workspace = true }
canoe-provider = { workspace = true }

# sp1
sp1-zkvm = { workspace = true, features = ["default"] }

# misc
bincode = "1.3.3"