[package]
name = "canoe-sp1-cc-client"
description = ""
edition = "2021"

[dependencies]
sp1-cc-client-executor = { workspace = true }

# alloy
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
canoe-bindings = { workspace = true }
canoe-provider = { workspace = true }

# sp1
sp1-zkvm = { workspace = true, features = ["default"] }

# misc
bincode.workspace = true