[package]
version = "0.1.0"
name = "canoe-sp1-cc-host"
edition = "2021"

[dependencies]
sp1-cc-host-executor = { git = "https://github.com/succinctlabs/sp1-contract-call.git", rev = "0a6b6ccc8364b180cb46ffa06c729a7b3939dfab" }
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call.git", rev = "0a6b6ccc8364b180cb46ffa06c729a7b3939dfab" }

alloy-primitives.workspace = true
alloy-sol-types = { workspace = true }
alloy-rpc-types = { version = "0.14.0", features = ["eth"] }
alloy-provider = { version = "0.14" }
bincode = "1.3.3"

anyhow = { workspace = true }
async-trait = { workspace = true }
canoe-provider.workspace = true
canoe-bindings.workspace = true
hokulea-proof.workspace = true

# misc:
url.workspace = true
tracing.workspace = true

# sp1
sp1-sdk.workspace = true

[build-dependencies]
sp1-build.workspace = true
