[package]
version = "0.1.0"
name = "canoe-sp1-cc-host"
edition = "2021"

[dependencies]
sp1-cc-host-executor = { git = "https://github.com/succinctlabs/sp1-contract-call.git", rev = "b49f97b7c5702fbe574547e523afaec0bee9014d" }
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call.git", rev = "b49f97b7c5702fbe574547e523afaec0bee9014d" }

alloy-primitives.workspace = true
alloy-sol-types = { workspace = true }
alloy-rpc-types = { version = "0.14.0", features = ["eth"] }
bincode = "1.3.3"

anyhow = { workspace = true }
async-trait = { workspace = true }
canoe-provider.workspace = true
canoe-bindings.workspace = true
eigenda-cert.workspace = true

# misc:
url.workspace = true
tracing.workspace = true

# sp1
sp1-sdk.workspace = true
sp1-core-executor.workspace = true
sp1-prover.workspace = true

[build-dependencies]
sp1-build.workspace = true
