[package]
version = "0.1.0"
name = "canoe-sp1-cc-host"
edition = "2021"

[dependencies]
sp1-cc-host-executor = { workspace = true }
sp1-cc-client-executor = { workspace = true }
rsp-primitives = { workspace = true }

alloy-primitives.workspace = true
alloy-sol-types = { workspace = true }
bincode.workspace = true

anyhow = { workspace = true }
async-trait = { workspace = true }
canoe-provider.workspace = true
canoe-bindings.workspace = true

# misc:
url.workspace = true
tracing.workspace = true

# sp1
sp1-sdk.workspace = true
sp1-core-executor.workspace = true
sp1-prover.workspace = true

# override accomodating sp1 cc version
alloy-rpc-types = { version = "0.14.0", features = ["eth"] }