[package]
name = "canoe-sp1-cc-verifier"
description = "Eigenda Canoe Sp1 CC Verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
eigenda-cert.workspace = true

canoe-verifier = { workspace = true }
canoe-bindings = { workspace = true }
sp1-cc-client-executor = { workspace = true }

cfg-if.workspace = true
tracing.workspace = true

sp1-lib = { workspace = true, features = ["verify"]}
sha2 = { workspace = true }
bincode = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }